# scratchstack-wrapper-aws-crt

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs
src/auth/: credentials.rs  mod.rs
src/cal/: ecc.rs  mod.rs
src/common/: allocator.rs  array_list.rs  atomics.rs  byte_buf.rs  date_time.rs  error.rs  hash_table.rs  linked_list.rs  logging.rs  mod.rs  mutex.rs  package.rs  priority_queue.rs  ref_count.rs  statistics.rs  string.rs  task_scheduler.rs  thread.rs
src/http/: connection.rs  connection_manager.rs  mod.rs  proxy.rs  request_response.rs  server.rs  status_code.rs
src/io/: channel.rs  channel_bootstrap.rs  event_loop.rs  host_resolver.rs  message_pool.rs  mod.rs  socket.rs  stream.rs  tls_channel_handler.rs
src/sdkutils/: mod.rs
